# django-json-schema-generator

./: LICENSE  README.md  setup.cfg
json_schema_generator/: apps.py  schemas.py  tests.py
